--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,11 @@ dependencies {
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
+
+
+    //Dexter
+    implementation "com.karumi:dexter:5.0.0"
+
+    //Crop
+    implementation "com.github.yalantis:ucrop:2.2.4"
 }
