--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,10 +41,18 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
 
-
     //Dexter
     implementation "com.karumi:dexter:5.0.0"
 
     //Crop
     implementation "com.github.yalantis:ucrop:2.2.4"
+
+    //Maps
+    implementation 'com.google.maps:google-maps-services:0.1.20'
+    implementation 'com.google.maps.android:android-maps-utils:0.4.4'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
+
+    //Multidex
+    implementation 'com.android.support:multidex:1.0.3'
 }
